# wormhole_simulator

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/wormhole_simulator/: __init__.py  cli.py  config.py  file_manager.py  node_manager.py  sim_chunk.py  sim_file.py  sim_node.py  wormhole_simulator.py
src/wormhole_simulator/utils/: __init__.py  distribute_chunks.py  fetch_hosted_file.py  fetch_transfered_file.py  file_expiration_timer.py  file_generator.py  node_generator.py  sim_clock.py  upload_file.py
tests/: __init__.py  test_wormhole_simulator.py
