[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wormhole_simulator"
version = "0.1.0"
description = "A p2p distributed file-sharing simulation"
readme = "README.rst"
authors = [
  {name = "Dylan Andrew Kress", email = "dylankress@gmail.com"}
]
maintainers = [
  {name = "Dylan Andrew Kress", email = "dylankress@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/dylankress/wormhole_simulator/issues"
changelog = "https://github.com/dylankress/wormhole_simulator/blob/master/changelog.md"
homepage = "https://github.com/dylankress/wormhole_simulator"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

